# demand_planner_backend

./: .env.example  .gitignore  README.md  REVIEW-CHANGELOG.md  docker-compose.yml
backend/: Dockerfile  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: adk_client.py  main.py  seed.py
backend/app/api/v1/: agents.py  auth.py  dashboard.py  forecasts.py  health.py  importing.py  overrides.py  router.py  users.py
backend/app/core/: config.py  deps.py  job_status.py  ratelimit.py  redis.py  security.py
backend/app/db/: base.py  session.py
backend/app/email/: sender.py
backend/app/models/: __init__.py  approval.py  core.py  data.py  forecasting.py
backend/app/schemas/: auth.py  forecasts.py  importing.py  overrides.py  user.py
backend/app/services/: auth_service.py  base.py  dashboard_service.py  forecast_service.py  import_service.py  metrics_service.py  override_service.py  user_service.py
backend/app/tasks/: celery_app.py  email_tasks.py  forecast_tasks.py
backend/tests/: test_app_imports.py  test_unit.py
