[project]
name = "dpb-backend"
version = "0.1.0"
description = "Demand Planner Backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  # passlib 1.7.4 (unmaintained) cannot read bcrypt >=4.1 version metadata and then
  # rejects every password as ">72 bytes". Pin bcrypt to a compatible release.
  "bcrypt>=4.0,<4.1",
  "redis>=5.0",
  "celery>=5.4",
  "slowapi>=0.1.9",
  "fastapi-mail>=1.4",
  "httpx>=0.27",
  "pandas>=2.2",
  "python-multipart>=0.0.9",
  "email-validator>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "testcontainers>=4", "ruff>=0.5"]

[tool.setuptools.packages.find]
include = ["app*"]
